@@ -1,3 +1,4 @@
+* Add workflow graph on ir.model
 * Add context model on ir.action.act_window
 * Switch to WSGI API
 * Limit the login size in LoginAttempt
